--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <title>Customer Database</title>
+  <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <h1>Customer Directory</h1>
   <div class="customers">
     <!-- Put Your Customers In Here -->
   </div>
